--- a/plugins/alt.1.0.0/alt-select2.html
+++ b/plugins/alt.1.0.0/alt-select2.html
@@ -3,6 +3,17 @@
         template: `<select class="form-control"><slot></slot></select>`,
         mounted() {
             $(this.$el).select2();
+
+            $(this.$el).on("change", () => {
+                this.$emit('change', this);
+            });
+        },
+        methods: {
+            value() {
+                return this.$el.value;
+            }, empty() {
+                $(this.$el).empty();
+            }
         }
     });
 
