--- a/plugins/alt.1.0.0/alt-rt2.html
+++ b/plugins/alt.1.0.0/alt-rt2.html
@@ -429,7 +429,7 @@
             isVisible: {
                 type: Boolean,
                 default: true
-            }, width: Number
+            }, width: String
         }, data() {
             return {
                 hide: false,
@@ -460,7 +460,7 @@
             }, getStyle() {
                 let style = {};
                 if (this.width) {
-                    style["min-width"] = this.width + "px";
+                    style["min-width"] = this.width;
                 }
                 return style;
 
