--- a/plugins/rt.2.0.0/rt.html
+++ b/plugins/rt.2.0.0/rt.html
@@ -60,7 +60,7 @@
         },
         watch: {
             page: function (v) {
-                console.log(v);
+             //   console.log(v);
                 this.p = v;
             }
         },
