--- a/plugins/alt.1.0.0/alt-ace.html
+++ b/plugins/alt.1.0.0/alt-ace.html
@@ -6,26 +6,38 @@
     Vue.component("ace", {
         template: document.currentScript.ownerDocument.getElementById("ace"),
         mounted() {
+
+            if (this.$slots.default) {
+                this.$el.value = this.$slots.default[0].text;
+            }
+
             var $that = $(this.$el);
+
 
             $(this.$el).addClass("hide");
             var $div = $("<div style='height:400px'></div>");
             $div.insertAfter(this.$el);
 
-            var editor = ace.edit($div[0]);
-            var mode = $(this.$el).attr("ace-mode");
-            if (mode) {
-                editor.session.setMode("ace/mode/" + mode);
-            }
+            $div.html(this.$el.value);
 
-            editor.getSession().setValue($(this.$el).val());
+            this.$nextTick(() => {
 
-            editor.getSession().on('change', function () {
-//                console.log(editor.getSession().getValue());
-                $that.val(editor.getSession().getValue());
+                var editor = ace.edit($div[0]);
+                var mode = $(this.$el).attr("ace-mode");
+                if (mode) {
+                    editor.session.setMode("ace/mode/" + mode);
+                }
+
+                editor.getSession().setValue($(this.$el).val());
+
+                editor.getSession().on('change', function () {
+                    //                console.log(editor.getSession().getValue());
+                    $that.val(editor.getSession().getValue());
+                });
+
             });
 
-            
+
         }
     });
 </script>
