--- a/plugins/alt.1.0.0/alt.html
+++ b/plugins/alt.1.0.0/alt.html
@@ -16,3 +16,9 @@
 <link rel="import" href="alt-rt2.html">
 <link rel="import" href="alt-grid.html">
 <link rel="import" href="alt-tab.html">
+<link rel="import" href="x-date.html">
+<link rel="import" href="x-datetime.html">
+<link rel="import" href="x-input.html">
+<link rel="import" href="x-inputselect.html">
+<link rel="import" href="x-select.html">
+<link rel="import" href="x-textarea.html">
